# Inkathon-Demo

./: README.md  package.json  pnpm-lock.yaml
contracts/: Cargo.toml  tsconfig.json
contracts/deployments/greeter/: greeter.contract  greeter.json  greeter.wasm
contracts/deployments/token/: token.contract  token.json  token.wasm
contracts/scripts/: deploytoken.ts
contracts/src/greeter/: lib.rs
contracts/src/token/: Cargo.toml  lib.rs
contracts/typed-contracts/build-extrinsic/: greeter.ts  token.ts
contracts/typed-contracts/constructors/: token.ts
contracts/typed-contracts/contract-info/: greeter.ts  token.ts
contracts/typed-contracts/data/: token.json
contracts/typed-contracts/mixed-methods/: greeter.ts  token.ts
contracts/typed-contracts/query/: greeter.ts  token.ts
contracts/typed-contracts/tx-sign-and-send/: greeter.ts  token.ts
contracts/typed-contracts/types-arguments/: token.ts
contracts/typed-contracts/types-returns/: token.ts
frontend/: package.json  tsconfig.json
frontend/src/app/: page.tsx
frontend/src/components/web3/: greeter-contract-interactions.tsx  token-contract-interactions.tsx
frontend/src/deployments/: deployments.ts
