[package]
name = "token"
version = "0.1.0"
authors = ["You <you@email.com>"]
description = "Implementation of PSP22 token standard in pure ink!"
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"], optional = true }
psp22-full = { version = "0.3.0", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std", "psp22-full/std",
]
ink-as-dependency = []
